# imoex-forecaster

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.dvc/: config
conf/: config.yaml
conf/data/: data.yaml
conf/data_loading/: data_loading.yaml
conf/model/: model.yaml
conf/training/: training.yaml
config/: sources.yaml  tickers.yaml
data/processed/: candle_features.parquet  news_ner.parquet  test.parquet  val.parquet
data/raw/: imoex.db  imoex_test.db
data/raw-data/: .gitignore  imoex-data-daily.dvc  news-data-daily.dvc
imoex-forecaster/loaders/: features_infer_loader.py  features_train_loader.py  target_loader.py
imoex-forecaster/preprocess/: preprocess_data.py
imoex-forecaster/utils/: __init__.py
imoex_forecaster/data/: make_dataset.py  preprocess_language.py  scrap_features.py  scrap_target.py
imoex_forecaster/loaders/: features_infer_loader.py  features_train_loader.py  target_loader.py
imoex_forecaster/models/: train.py
imoex_forecaster/preprocess/: preprocess_data.py
imoex_forecaster/utils/: date_utils.py  datetime_utils.py  s3_utils.py
logs/simple_nn/version_0/: events.out.tfevents.1736195630.m-grinin.85306.0  hparams.yaml
logs/simple_nn/version_1/: events.out.tfevents.1736196375.m-grinin.86090.0  hparams.yaml
logs/simple_nn/version_2/: events.out.tfevents.1736196698.m-grinin.88196.0  hparams.yaml
models/: lstm_best.pt  lstm_model.pt  lstm_scaler.pkl  metrics.md
notebooks/: LSTM_train.ipynb
scripts/: download_news.py
src/: config.py
src/api/: main.py  schemas.py
src/bot/: handlers.py  main.py  notifier.py
src/common/: time_utils.py
src/inference/: cache.py  explain.py  predict_worker.py  queue.py  worker.py
src/ingest/: iss.py  rss.py  scheduler.py
src/ingest/data/raw/: imoex.db
src/ml/: dataset.py  eval.py  lstm.py  train_lstm.py
src/preprocessing/: dataset_builder.py  embeddings.py  features.py  ner.py  text_clean.py
src/storage/: db.py  models.py
